[workspace]
members = ["example", "rmt-macros"]

[package]
name = "rmt"
version = "0.1.0"
edition = "2024"
description = "Rust Microservice Template"

[dependencies]
serde_json = "^1.0"
tokio = { version = "1", features = ["full"] }
rmtm = { path = "rmt-macros" }
reqwest = { version = "^0.13", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
log = "^0.4"
actix-web = "4"
